--- a/src/assets/css/modules/_layout.scss
+++ b/src/assets/css/modules/_layout.scss
@@ -78,9 +78,6 @@
             grid-column: 8 / span 5;
             grid-row: 1 / span 8;
         }
-        &--bring-to-front {
-            z-index: 1;
-        }
     }
 
     // Fullwidth image with box underneath
